--- a/TemplateBuilder/Views/ToolboxView.xaml
+++ b/TemplateBuilder/Views/ToolboxView.xaml
@@ -8,7 +8,8 @@
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance viewModel:ToolboxViewModel}">
     <Grid>
-        <ListBox ItemsSource="{Binding Controls, Mode=TwoWay}" SelectedItem="{Binding SelectedControl}" DisplayMemberPath="Name">
+        <ListBox ItemsSource="{Binding Controls, Mode=TwoWay}" SelectedItem="{Binding SelectedControl}" DisplayMemberPath="Name"
+                 PreviewMouseLeftButtonDown="ListBox_PreviewMouseLeftButtonDown">
         </ListBox>
     </Grid>
 </UserControl>
