--- a/TemplateBuilder/Views/BuilderView.xaml
+++ b/TemplateBuilder/Views/BuilderView.xaml
@@ -13,24 +13,18 @@
         <avalonDock:DockingManager x:Name="dockingManager">
             <avalonDock:LayoutRoot>
                 <avalonDock:LayoutPanel Orientation="Horizontal">
-                    <avalonDock:LayoutAnchorablePaneGroup DockWidth="150" Orientation="Vertical">
+                    <avalonDock:LayoutAnchorablePaneGroup DockWidth="150" Orientation="Vertical" x:Name="lapgToolBox">
                         <avalonDock:LayoutAnchorablePane>
                             <avalonDock:LayoutAnchorable Title="Toolbox">
                                 <views:ToolboxView DataContext="{Binding Toolbox}" />
                             </avalonDock:LayoutAnchorable>
                         </avalonDock:LayoutAnchorablePane>
-                        <avalonDock:LayoutAnchorablePane>
-                            <avalonDock:LayoutAnchorable Title="Toolbox">
-                                <ListBox ItemsSource="{Binding Controls, Mode=TwoWay}" 
-                                         AllowDrop="True" 
-                                         Drop="ListBox_Drop" 
-                                         DisplayMemberPath="Name"></ListBox>
-                            </avalonDock:LayoutAnchorable>
-                        </avalonDock:LayoutAnchorablePane>
                     </avalonDock:LayoutAnchorablePaneGroup>
                     <avalonDock:LayoutAnchorablePane DockWidth="5*">
                         <avalonDock:LayoutAnchorable CanAutoHide="False" CanFloat="False" CanHide="False" CanClose="False">
-                            <Canvas x:Name="cContainer" Margin="20"/>
+                            <StackPanel Drop="ListBox_Drop" 
+                                  Height="Auto" Width="Auto" Background="Silver" AllowDrop="True">
+                            </StackPanel>
                         </avalonDock:LayoutAnchorable>
                     </avalonDock:LayoutAnchorablePane>
                     <avalonDock:LayoutAnchorablePaneGroup DockWidth="150" Orientation="Vertical">
