--- a/TemplateBuilder/Views/ProjectView.xaml
+++ b/TemplateBuilder/Views/ProjectView.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid x:Name="ProjectTemplate">
-        
-    </Grid>
+    <StackPanel x:Name="ProjectTemplate" Drop="ListBox_Drop" Height="Auto" Width="Auto" Background="Silver" AllowDrop="True">
+    </StackPanel>
 </UserControl>
