--- a/TemplateBuilder/Views/ToolboxView.xaml
+++ b/TemplateBuilder/Views/ToolboxView.xaml
@@ -5,11 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModel="clr-namespace:TemplateBuilder.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+             xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Extras.WPF45"
              d:DataContext="{d:DesignInstance viewModel:ToolboxViewModel}">
     <Grid>
-        <ListBox ItemsSource="{Binding Controls, Mode=TwoWay}" SelectedItem="{Binding SelectedControl}" DisplayMemberPath="Name"
-                 PreviewMouseLeftButtonDown="ListBox_PreviewMouseLeftButtonDown">
+        <ListBox ItemsSource="{Binding Controls, Mode=TwoWay}" SelectedItem="{Binding SelectedControl}" DisplayMemberPath="Name">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="PreviewMouseLeftButtonDown" >
+                    <cmd:EventToCommand Command="{Binding ListBoxPreviewMouseLeftButtonDown}" PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </ListBox>
     </Grid>
 </UserControl>
