--- a/TemplateBuilder/Views/PropertiesView.xaml
+++ b/TemplateBuilder/Views/PropertiesView.xaml
@@ -5,9 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModel="clr-namespace:TemplateBuilder.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              d:DataContext="{d:DesignInstance viewModel:PropertiesViewModel}">
     <Grid>
-        
+        <xctk:PropertyGrid AutoGenerateProperties="True" SelectedObject="{Binding Path=SelectedControl}">
+            <xctk:PropertyGrid.PropertyDefinitions>
+                <xctk:PropertyDefinition Name="FirstName" />
+                <xctk:PropertyDefinition Name="FavoriteColor" />
+                <xctk:PropertyDefinition Name="PetNames" />
+            </xctk:PropertyGrid.PropertyDefinitions>
+        </xctk:PropertyGrid>
     </Grid>
 </UserControl>
