--- a/TemplateBuilder/Views/ProjectView.xaml
+++ b/TemplateBuilder/Views/ProjectView.xaml
@@ -10,7 +10,14 @@
              d:DataContext="{d:DesignInstance viewModel:ProjectViewModel}">
 
     <UserControl.Resources>
+        <!--<ContextMenu x:Key="cmControls">
+            <MenuItem Header="Eliminate" Command="{Binding Path=EliminateSelectedControl}" 
+                      CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Parent}"/>
+
+        </ContextMenu>-->
+
         <Style TargetType="{x:Type TextBox}">
+            <!--<Setter Property="ContextMenu" Value="{DynamicResource cmControls}" />-->
             <Style.Triggers>
                 <Trigger Property="IsFocused" Value="true">
                     <Setter Property="BorderBrush" Value="Silver"/>
@@ -19,6 +26,7 @@
             </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type RadioButton}">
+            <!--<Setter Property="ContextMenu" Value="{DynamicResource cmControls}" />-->
             <Style.Triggers>
                 <Trigger Property="IsFocused" Value="true">
                     <Setter Property="BorderBrush" Value="Silver"/>
@@ -27,6 +35,7 @@
             </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type CheckBox}">
+            <!--<Setter Property="ContextMenu" Value="{DynamicResource cmControls}" />-->
             <Style.Triggers>
                 <Trigger Property="IsFocused" Value="true">
                     <Setter Property="BorderBrush" Value="Silver"/>
@@ -35,6 +44,7 @@
             </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type Label}">
+            <!--<Setter Property="ContextMenu" Value="{DynamicResource cmControls}" />-->
             <Style.Triggers>
                 <Trigger Property="IsFocused" Value="true">
                     <Setter Property="BorderBrush" Value="Silver"/>
@@ -43,9 +53,11 @@
             </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type DatePicker}">
+            <!--<Setter Property="ContextMenu" Value="{DynamicResource cmControls}" />-->
             <Style.Triggers>
                 <Trigger Property="IsKeyboardFocusWithin" Value="true">
                     <Setter Property="Background" Value="Silver"/>
+                    <Setter Property="BorderThickness" Value="2"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
