--- a/TemplateBuilder/Views/BuilderView.xaml
+++ b/TemplateBuilder/Views/BuilderView.xaml
@@ -20,7 +20,7 @@
                 <MenuItem Header="Open _Recent" Command="{Binding Path=OpenRecentProject}" IsEnabled="False"></MenuItem>
                 <MenuItem Header="_Save CTRL + S" Command="{Binding Path=SaveProject}"></MenuItem>
                 <MenuItem Header="Save _As CTRL + A" Command="{Binding Path=SaveAsProject}" IsEnabled="False"></MenuItem>
-                <MenuItem Header="_Exit CTRL + Q" Command="{Binding Path=ExitProject}"></MenuItem>
+                <MenuItem Header="_Exit CTRL + Q" Command="{Binding Path=ExitProject}" IsEnabled="False"></MenuItem>
             </MenuItem>
         </Menu>
 
